--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astunparse==1.6.3
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
+flake8==3.9.2
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.31.0
@@ -15,6 +16,7 @@ Keras==2.4.3
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 Markdown==3.3.4
+mccabe==0.6.1
 numpy==1.19.5
 oauthlib==3.1.1
 opt-einsum==3.3.0
@@ -22,6 +24,8 @@ Pillow==8.2.0
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pyflakes==2.3.1
 PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
